FIX: FeatureCard & TODOs

--- a/src/components/shared/footer-banner-autoplayer/footer-banner-autoplayer.module.scss
+++ b/src/components/shared/footer-banner-autoplayer/footer-banner-autoplayer.module.scss
@@ -34,7 +34,7 @@
       text-align: start;
     }
 
-    .feature-card {
+    .info-header {
       text-align: start;
       align-items: flex-start;
       gap: 16px;
