Refactor README, Button & TagLabel

--- a/src/components/ui/tag-label/tag-label.module.scss
+++ b/src/components/ui/tag-label/tag-label.module.scss
@@ -1,11 +1,17 @@
-.span {
-  padding: 8px 16px;
-  width: fit-content;
-  border-radius: 50px;
-  background: var(--light100);
-  border: 1px solid var(--light200);
+.tag-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
 
+  background: var(--light100);
+  width: fit-content;
+
+  padding: 8px 16px;
+  border: 1px solid var(--light200);
+  border-radius: 50px;
+
+  color: var(--dark700);
   font-size: 14px;
   font-weight: 600;
-  color: var(--dark700);
 }
