+ Ajustes CSS pro botão

--- a/src/components/ui/button/default-button.module.scss
+++ b/src/components/ui/button/default-button.module.scss
@@ -1,4 +1,9 @@
 .button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+
   border: none;
   outline: none;
 
@@ -10,7 +15,6 @@
   color: #fff;
   font-size: 16px;
   font-variation-settings: 'wght' 600;
-
   transition: background 0.3s, border 0.3s, opacity 0.3s;
 }
 
