--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -9,7 +9,7 @@
 
   background: var(--auxiliary-orange);
   border-radius: 8px;
-  padding: 16px;
+  padding: 16px 42px;
   cursor: pointer;
 
   color: #fff;
