--- a/src/components/shared/newsletter-strip/newsletter-strip.module.scss
+++ b/src/components/shared/newsletter-strip/newsletter-strip.module.scss
@@ -1,4 +1,5 @@
 .newsletter-strip {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -67,6 +68,8 @@
       border: none;
       outline: none;
       z-index: 1;
+
+      color: black;
 
       @media (max-width: 540px) {
         width: 100%;
