--- a/src/components/shared/newsletter-strip/newsletter-strip.module.scss
+++ b/src/components/shared/newsletter-strip/newsletter-strip.module.scss
@@ -1,133 +1,124 @@
 .newsletter-strip {
+  position: relative;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: var(--global-padding-single);
+  max-width: 1440px;
 
-  padding: 64px var(--global-padding-single);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+
+  padding: 72px var(--global-padding-single);
   background: var(--dark700);
 
-  @media (max-width: 1024px) {
-    flex-direction: column;
+  .icon {
+    z-index: 1;
   }
 
-  .left,
-  .right {
+  .info-header {
+    z-index: 1;
+    gap: 6px;
+
+    .title {
+      font-size: 24px;
+    }
+
+    .subtitle {
+      font-size: 16px;
+      opacity: 0.8;
+    }
+  }
+
+  .input-wrapper {
+    width: 100%;
+    padding: 0 100px;
+
+    z-index: 1;
     display: flex;
     align-items: center;
-  }
-
-  .left {
-    gap: 32px;
-
-    @media (max-width: 1024px) {
-      flex-direction: column;
-      gap: 16px;
-    }
-
-    .icon {
-      z-index: 1;
-    }
-
-    .feature-card {
-      gap: 6px;
-      text-align: start;
-      align-items: flex-start;
-
-      @media (max-width: 1024px) {
-        text-align: center;
-        align-items: center;
-
-      }
-
-      .feature-card-title {
-        font-size: 24px;
-      }
-    }
-  }
-
-  .right {
-    position: relative;
     gap: 16px;
 
-    @media (max-width: 768px) {
-      width: 100%;
-      flex-direction: column;
+    @media (max-width: 1024px) {
+      padding: 0 64px;
     }
 
-    .email,
-    .name {
-      height: 55.5px;
+    @media (max-width: 900px) {
+      padding: 0 32px;
+    }
 
-      padding: 16px 24px;
-      border-radius: 8px;
+    @media (max-width: 768px) {
+      padding: 0;
+    }
 
-      background: #FFF;
+    @media (max-width: 768px) {
+      flex-direction: column;
+      max-width: 415px;
+    }
+
+
+    .name,
+    .email {
+      width: 100%;
+      height: 56px;
+
+      background: white;
       border: none;
       outline: none;
-      z-index: 1;
 
-      color: black;
-
-      @media (max-width: 768px) {
-        width: 100% !important;
-      }
+      border-radius: 8px;
+      color: var(--neutral700);
+      font-size: 14px;
+      padding: 0 24px;
     }
 
-    .email {
-      width: 335px;
-    }
-
-    .name {
-      width: 200px;
+    .name::placeholder,
+    .email::placeholder {
+      color: var(--neutral500);
+      font-size: 14px;
     }
 
     .button {
-      width: 145px;
-      height: 55.5px;
-      padding: 16px 48px;
-      z-index: 1;
+      height: 56px;
 
       @media (max-width: 768px) {
         width: 100%;
       }
     }
+  }
 
-    .blue-hue,
-    .background-logo {
-      position: absolute;
-      top: -100px;
-      right: 0px;
+  .background-logo {
+    position: absolute;
+    top: -24px;
+    left: 64px;
 
-      z-index: 0;
+    z-index: 0;
 
-      @media (max-width: 1024px) {
-        left: 50%;
-        transform: translateX(-50%);
-        scale: 120%;
-        transform-origin: bottom center;
-      }
+    width: 335.5px;
+    height: 439.05px;
 
-      @media (max-width: 768px) {
-        display: none;
-      }
+    @media (max-width: 768px) {
+      top: 50%;
+      left: 50%;
+
+      transform: translateY(-50%) translateX(-50%);
+      transform-origin: center;
     }
 
-    .blue-hue {
-      opacity: 0.7;
+    .logo {
+      position: absolute;
+      z-index: 2;
+    }
 
-      width: 219px;
-      height: 425px;
-      border-radius: 100%;
-      background: var(--light500);
+    .hue {
+      position: absolute;
+      z-index: 1;
+
+      width: 302px;
+      height: 586px;
+
+      border-radius: 50%;
       filter: blur(125px);
-
-    }
-
-    .background-logo {
-      position: absolute;
-      z-index: 0;
+      background: var(--light500);
     }
   }
 }
