--- a/src/components/ui/accordion/accordion.module.scss
+++ b/src/components/ui/accordion/accordion.module.scss
@@ -28,6 +28,7 @@
       align-items: center;
       gap: 64px;
 
+      text-align: start;
       font-size: 18px;
 
       @media (max-width: 425px) {
